src/App/components/LivestreamTile/style.module.sass
@import '../../../variables'

.container
  margin-bottom: 10px
  background-image: linear-gradient(270deg, rgb(255 255 255 / 0%) 40%, $main-dark-color 100%)
  border-radius: 6px

.stream
  position: relative
  height: 65px
  overflow: hidden
  box-shadow: 0 0 5px 1px #00000000
  cursor: pointer
  border-radius: 6px

  &:hover
    background-image: linear-gradient(270deg, rgb(255 255 255 / 0%) 0%, $main-dark-color 100%)

  .streamPicContainer
    position: relative
    height: 100%

    .streamPic
      width: 115px
      height: 100%
      border-radius: 6px
      &.hovered
        filter: blur(3px) brightness(40%)

    .favoriteIcon
      position: absolute
      font-size: 25px
      color: white
      left: 50%
      top: 50%
      transform: translate(-50%, -50%)
      transition: transform 100ms ease-in-out
      &.favorited
        color: gold
      &.hovered
        transform: translate(-50%, -50%) scale(1.3)

  .streamerName
    position: absolute
    bottom: 0
    color: $color-white
    background-color: rgb(0 0 0 / 90%)
    padding: 2px 7px 3px 6px
    font-size: 14px
    white-space: nowrap
    text-overflow: ellipsis
    overflow: hidden
    box-sizing: border-box
    max-width: 115px
    border-radius: 0 5px 0 0

  .rightPart
    position: absolute
    width: calc(100% - 119px)
    height: 100%
    top: 0
    right: 0
    padding: 2px 2px 2px 3px
    box-sizing: border-box

    .streamTitle
      color: $stream-element-text
      white-space: nowrap
      text-overflow: ellipsis
      overflow: hidden
      font-weight: bold
      font-size: 13px

    .streamGame
      color: $white-60
      font-size: 13px
      font-style: italic

    .streamTags
      position: absolute
      bottom: 0

    .streamTime, .streamLanguage, .streamMature
      display: inline-block
      color: $stream-element-text
      padding: 1px 7px 1px 6px
      background-color: $stream-tags-background
      border: 1px solid $stream-tags-border
      border-radius: 15px
      font-size: 12px
      font-weight: bold
      box-sizing: border-box
      margin-bottom: 4px
      margin-right: 5px

    .viewerCount
      position: absolute
      color: $stream-element-text
      padding: 2px 8px 2px 5px
      background-color: $stream-tags-background
      border: 1px solid $stream-tags-border
      border-radius: 15px
      right: 0
      bottom: 3px
      font-size: 14px
      font-weight: bold
      box-sizing: border-box
      transform: scale(0.85)

      .liveCircle
        background-color: #eb0400
        width: 15px
        height: 15px
        border-radius: 50%
        margin-right: 5px
        margin-top: 1px
        float: left

